// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test about 1`] = `
<div
  className="MuiBox-root css-178yklu"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-justify-content-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11"
    >
      <script
        async={true}
        crossOrigin="anonymous"
        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8526200711405760"
      />
      <ins
        className="adsbygoogle"
        data-ad-client="ca-pub-8526200711405760"
        data-ad-format="auto"
        data-ad-slot="1191995269"
        data-full-width-responsive="true"
        style={
          {
            "display": "block",
          }
        }
      />
      <div
        className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
        style={
          {
            "marginTop": "15px",
          }
        }
      >
        <div
          className="MuiBox-root css-19midj6"
        >
          <h2>
            当サイトについて
          </h2>
          <div
            className="MuiBox-root css-19midj6"
          >
            <h3>
              概要
            </h3>
            <div
              className="MuiBox-root css-d0uhtl"
            >
              <p>
                当サイトはNEXON様の運営するMMORPG「マビノギ」内のエンチャントスクロール情報を検索するためのサイトです。
                <br />
                全てのページがリンクフリーでご利用いただけます。リンク及び引用、スクリーンショット等ご自由にお使いください。
              </p>
            </div>
          </div>
          <div
            className="MuiBox-root css-19midj6"
          >
            <h3>
              お問合せ先
            </h3>
            <div
              className="MuiBox-root css-d0uhtl"
            >
              <p>
                下記からご連絡いただけます。
                <br />
                当サイトについてお問合せございましたらDMでご連絡いただけますと幸いです。
              </p>
              <a
                className=""
                href="/https://twitter.com/mabiesdb"
                onClick={[Function]}
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-11lvro2-MuiSvgIcon-root-About"
                  data-testid="TwitterIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M22.46 6c-.77.35-1.6.58-2.46.69.88-.53 1.56-1.37 1.88-2.38-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29 0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15 0 1.49.75 2.81 1.91 3.56-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07 4.28 4.28 0 0 0 4 2.98 8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21 16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56.84-.6 1.56-1.36 2.14-2.23z"
                  />
                </svg>
                <span
                  className="css-1ycthui-About"
                >
                  公式Twitter
                </span>
              </a>
            </div>
          </div>
          <div
            className="MuiBox-root css-19midj6"
          >
            <h3>
              管理者について
            </h3>
            <div
              className="MuiBox-root css-d0uhtl"
            >
              <p>
                マリーサーバー在住の「クマリオ」が運営しています。
              </p>
              <div>
                <a
                  className=""
                  href="/https://twitter.com/jackumagic"
                  onClick={[Function]}
                >
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-11lvro2-MuiSvgIcon-root-About"
                    data-testid="TwitterIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M22.46 6c-.77.35-1.6.58-2.46.69.88-.53 1.56-1.37 1.88-2.38-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29 0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15 0 1.49.75 2.81 1.91 3.56-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07 4.28 4.28 0 0 0 4 2.98 8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21 16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56.84-.6 1.56-1.36 2.14-2.23z"
                    />
                  </svg>
                  <span
                    className="css-1ycthui-About"
                  >
                    Twitter
                  </span>
                </a>
              </div>
              <div
                className="css-1g5hxoz-About"
              >
                <a
                  className=""
                  href="/https://jackumagic.com"
                  onClick={[Function]}
                >
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-11lvro2-MuiSvgIcon-root-About"
                    data-testid="FeedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V8l-5-5zM7 7h5v2H7V7zm10 10H7v-2h10v2zm0-4H7v-2h10v2zm-2-4V5l4 4h-4z"
                    />
                  </svg>
                  <span
                    className="css-1ycthui-About"
                  >
                    ブログ
                  </span>
                </a>
              </div>
              <div
                className="css-1g5hxoz-About"
              >
                <a
                  className=""
                  href="/https://www.youtube.com/channel/UCXBUjcXZta7-zKA-qSj-zFw/featured"
                  onClick={[Function]}
                >
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-11lvro2-MuiSvgIcon-root-About"
                    data-testid="YouTubeIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 15l5.19-3L10 9v6m11.56-7.83c.13.47.22 1.1.28 1.9.07.8.1 1.49.1 2.09L22 12c0 2.19-.16 3.8-.44 4.83-.25.9-.83 1.48-1.73 1.73-.47.13-1.33.22-2.65.28-1.3.07-2.49.1-3.59.1L12 19c-4.19 0-6.8-.16-7.83-.44-.9-.25-1.48-.83-1.73-1.73-.13-.47-.22-1.1-.28-1.9-.07-.8-.1-1.49-.1-2.09L2 12c0-2.19.16-3.8.44-4.83.25-.9.83-1.48 1.73-1.73.47-.13 1.33-.22 2.65-.28 1.3-.07 2.49-.1 3.59-.1L12 5c4.19 0 6.8.16 7.83.44.9.25 1.48.83 1.73 1.73z"
                    />
                  </svg>
                  <span
                    className="css-1ycthui-About"
                  >
                    YouTubeチャンネル
                  </span>
                </a>
              </div>
            </div>
          </div>
          <div
            className="MuiBox-root css-19midj6"
          >
            <h3>
              データの収集元
            </h3>
            <div
              className="MuiBox-root css-d0uhtl"
            >
              <p>
                <a
                  href="http://fruitmilk.xii.jp/enchant/"
                >
                  エンチャント検索っぽいそれ
                </a>
                様より大元のデータを頂きました。
                <br />
                先方のご協力無しでは本サイトのリリースまで辿り着けませんでした。
                <br />
                誠にありがとうございます。
              </p>
              <p>
                追加のデータとして一部
                <a
                  href="https://wikiwiki.jp/mabinogi/"
                >
                  Mabinogi Wiki
                </a>
                やユーザの皆様からご教示いただきましたデータも追加させていただいております。
              </p>
              <p>
                最新データは日本版正式実装データを主な対象にデータを追加しております。
                <br />
                例外的にアップデートが確定しているコンテンツのエンチャントは先行情報をもとにデータ追加を実施します。
              </p>
            </div>
          </div>
        </div>
      </div>
      <script
        async={true}
        crossOrigin="anonymous"
        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8526200711405760"
      />
      <ins
        className="adsbygoogle"
        data-ad-client="ca-pub-8526200711405760"
        data-ad-format="auto"
        data-ad-slot="1191995269"
        data-full-width-responsive="true"
        style={
          {
            "display": "block",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`snapshot test appHistory 1`] = `
<div
  className="MuiBox-root css-178yklu"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-justify-content-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11"
    >
      <script
        async={true}
        crossOrigin="anonymous"
        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8526200711405760"
      />
      <ins
        className="adsbygoogle"
        data-ad-client="ca-pub-8526200711405760"
        data-ad-format="auto"
        data-ad-slot="1191995269"
        data-full-width-responsive="true"
        style={
          {
            "display": "block",
          }
        }
      />
      <div
        className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
        style={
          {
            "marginTop": "15px",
          }
        }
      >
        <div
          className="MuiBox-root css-19midj6"
        >
          <h2>
            更新履歴
          </h2>
          <div
            className="MuiBox-root css-19midj6"
          >
            <div
              className="MuiBox-root css-d0uhtl"
            >
              <p>
                ESDBの更新履歴です。
              </p>
              <a
                className="twitter-timeline"
                data-height="800"
                data-theme="dark"
                href="https://twitter.com/mabiesdb?ref_src=twsrc%5Etfw"
              />
            </div>
          </div>
        </div>
      </div>
      <script
        async={true}
        crossOrigin="anonymous"
        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8526200711405760"
      />
      <ins
        className="adsbygoogle"
        data-ad-client="ca-pub-8526200711405760"
        data-ad-format="auto"
        data-ad-slot="1191995269"
        data-full-width-responsive="true"
        style={
          {
            "display": "block",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`snapshot test privacyPolicy 1`] = `
<div
  className="MuiBox-root css-178yklu"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-justify-content-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11"
    >
      <script
        async={true}
        crossOrigin="anonymous"
        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8526200711405760"
      />
      <ins
        className="adsbygoogle"
        data-ad-client="ca-pub-8526200711405760"
        data-ad-format="auto"
        data-ad-slot="1191995269"
        data-full-width-responsive="true"
        style={
          {
            "display": "block",
          }
        }
      />
      <div
        className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
        style={
          {
            "marginTop": "15px",
          }
        }
      >
        <div
          className="MuiBox-root css-19midj6"
        >
          <h2>
            プライバシーポリシー
          </h2>
          <div
            className="MuiBox-root css-19midj6"
          >
            <h3>
              アクセス解析ツールについて
            </h3>
            <div
              className="MuiBox-root css-d0uhtl"
            >
              <p>
                当サイトでは、Googleによるアクセス解析ツール「Googleアナリティクス」を利用しています。
                <br />
                このGoogleアナリティクスはトラフィックデータの収集のためにCookieを使用しています。
              </p>
              <p>
                このトラフィックデータは匿名で収集されており、個人を特定するものではありません。
                <br />
                この機能はCookieを無効にすることで収集を拒否することが出来ますので、お使いのブラウザの設定をご確認ください。
                <br />
                この規約に関して、詳しくは
                <a
                  href="https://marketingplatform.google.com/about/analytics/terms/jp/"
                  target="__blank"
                >
                  こちらをクリックしてください。
                </a>
              </p>
            </div>
          </div>
          <div
            className="MuiBox-root css-19midj6"
          >
            <h3>
              免責事項
            </h3>
            <div
              className="MuiBox-root css-d0uhtl"
            >
              <p>
                当サイトからリンクやバナーなどによって他のサイトに移動された場合、移動先サイトで提供される情報、サービス等について一切の責任を負いません。
                <br />
                当サイトのコンテンツ・情報につきまして、可能な限り正確な情報を掲載するよう努めておりますが、誤情報が入り込んだり、情報が古くなっていることもございます。
              </p>
              <p>
                当サイトに掲載された内容によって生じた損害等の一切の責任を負いかねますのでご了承ください。
              </p>
            </div>
          </div>
          <div
            className="MuiBox-root css-19midj6"
          >
            <h3>
              プライバシーポリシーの変更について
            </h3>
            <div
              className="MuiBox-root css-d0uhtl"
            >
              <p>
                当サイトは、個人情報に関して適用される日本の法令を遵守するとともに、本ポリシーの内容を適宜見直しその改善に努めます。
                <br />
                修正された最新のプライバシーポリシーは常に本ページにて開示されます。
              </p>
            </div>
          </div>
        </div>
      </div>
      <script
        async={true}
        crossOrigin="anonymous"
        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8526200711405760"
      />
      <ins
        className="adsbygoogle"
        data-ad-client="ca-pub-8526200711405760"
        data-ad-format="auto"
        data-ad-slot="1191995269"
        data-full-width-responsive="true"
        style={
          {
            "display": "block",
          }
        }
      />
    </div>
  </div>
</div>
`;
